# b3-scraper

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
b3_scraper/: file.py  main.py
b3_scraper/stocks/: process.py  save.py  scrap.py
b3_scraper/viz/: main.py  utils.py
