[tool.poetry]
name = "b3-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "b3_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pandas = "^2.2.1"
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.27"
streamlit = "^1.31.1"
altair = "^5.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = [".venv", ".ruff_cache", ".mypy_cache"]
ignore         = ["F401"]
line-length    = 100
select         = ["E", "F", "W"]
